--- a/index.css
+++ b/index.css
@@ -1,36 +1,55 @@
 *{
-    padding: 0%;
-    margin: 0%;
+    margin: 0;
+    padding: 0;
 }
+
 body{
-    background-color: rgb(240, 240, 243);
-    width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
-.principal{
-    background-color: rgb(255, 255, 255);
-    width: 50%;
-    height: 50%;
-    border-color: black;
-    border-width: 1px;
-    border-style: solid;
+.formulario{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    width: 200px;
+    height: 250px;
 }
-.principal header{
-    background-color: rgb(200, 200, 200);
-    width: 100%;
-    height: 10%;
+.formulario h2{
+    margin-bottom: 15px;
+    font-size: 24px;
     text-align: center;
+    color: rgb(58, 57, 57);
 }
-.principal .body{
-    background-color: rgb(255, 255, 255);
+input{
+    margin-top: 10px;
     width: 100%;
-    height: 80%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    font-size: 14px;
+    color: #323532;
 }
-.principal footer{
-    background-color: rgb(200, 200, 200);
+input:focus{
+    border: 2px solid #4CAF50;;
+    outline: none;
+}
+button{
+    margin-top: 15px;
     width: 100%;
-    height: 10%;
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
+    color: #4CAF50;
 }
